ID和CLASS有什么区别？
ID和CLASS有什么区别？

--- a/index.html
+++ b/index.html
@@ -2475,7 +2475,7 @@
                 <td>2017-5-14</td>
                 <td><a href="PPT/js-01-jsType.html">JS数据类型</a></td>
                 <td>js-1</td>
-            </tr>
+            </tr>		
 		<tr>
                 <td>399</td>
                 <td>2017-5-16</td>
@@ -2506,6 +2506,12 @@
                 <td><a href="PPT/CSS-02-codeUpServer.html">如何将代码部署到自己的服务器上面？</a></td>
                 <td>js-6</td>
             </tr>
+	     <tr>
+                <td>404</td>
+                <td>2017-5-14</td>
+                <td><a href="PPT/JS-01-different-IDandclass.html">ID和CLASS有什么区别？</a></td>
+                <td>js-1</td>
+            </tr>		
         </table>
     </div>
 </main>
